# kokomoor-platform

./: .env.example  .gitignore  AGENTS.md  CODEX_AUDIT_PROMPT.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  templog.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  342a070bbcde_initial_job_listings_and_pipeline_runs.py
core/: AGENTS.md  __init__.py  config.py  database.py
core/browser/: AGENTS.md  __init__.py  actions.py  captcha.py  debug_capture.py  human_behavior.py  observer.py  rate_limiter.py  session.py  stealth.py
core/fetch/: AGENTS.md  __init__.py  browser_fetch.py  http_client.py  jsonld.py  protocol.py  types.py
core/llm/: AGENTS.md  __init__.py  anthropic.py  protocol.py  structured.py  throttle.py  usage.py
core/models/: __init__.py
core/notifications/: __init__.py  heal_auth.py  inbox.py
core/observability/: __init__.py  metrics.py
core/scraper/: AGENTS.md  __init__.py  content_store.py  dedup.py  fixtures.py  http_client.py  path_safety.py
core/testing/: __init__.py
core/tests/: __init__.py  test_browser_stealth.py  test_fetch.py  test_heal_auth.py  test_human_behavior.py  test_inbox_watcher.py  test_scraper_path_safety.py  test_web_agent_actions.py  test_web_agent_redaction.py  test_workflows_analysis.py  test_workflows_tailoring.py
core/web_agent/: AGENTS.md  __init__.py  context.py  controller.py  protocol.py
core/workflows/: __init__.py  analysis.py  tailoring.py
data/: dedup_seen.json
data/debug_captures/: pipeline_log.md
data/tailored_cover_letters/manual-run/: Airbnb_Staff_Technical_Program_Manager_Community_S_a57f5cda.md  AristaMD_Senior_Software_EngineerSenior_Software_E_b780c58e.md  Canonical_Embedded_Linux_Field_Engineering_Manager_3ed87ded.md  ChargeScape_Software_EngineerSoftware_Engineer_540d0a99.md  Maximus_Lead_Software_Engineer__Tech_Lead_Manager__d50b30ef.md  OneStream_Software_OneStream_Demo_Engineer_________a2d85857.md  Prolink_Director_of_MSP_Program_Management_2026-32_5537ef18.md  (+4 more)
docs/: application_engine_architecture.md  application_engine_runbook.md  architecture.md  decisions.md  glossary.md  job_agent_flow_diagram.md  pipeline_guide.md  pipeline_remediation_2026_04.md  product-vision.md  ranking_architecture.md
docs/audits/: independent_audit_prompt.md
pipelines/: __init__.py
pipelines/job_agent/: AGENTS.md  Dockerfile  README.md  __init__.py  __main__.py  graph.py  state.py  utils.py
pipelines/scraper/: AGENTS.md  __init__.py  models.py  smoke_test.py
scripts/: clean_data.py  run_discovery_node.py  run_discovery_to_pipeline_one.py  run_manual_url_tailor.py  run_tailor_one.py  setup_tower.sh
(+200 files in other folders)
